manifests/user/overlays/dev/patch-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskfarm-user
spec:
  replicas: 1
